src/css/global.css
* {
    margin: 0;
    padding: 0;
}

/* fonts time */
/* we do not use italics, no reason to load them */
@font-face {
    font-family: "Calibre";
    font-weight: 300;
    src: url("../fonts/Calibre-Light.otf");
}

@font-face {
    font-family: "Calibre";
    font-weight: 400;
    src: url("../fonts/Calibre-Regular.otf");
}

@font-face {
    font-family: "Calibre";
    font-weight: 500;
    src: url("../fonts/Calibre-Medium.otf");
}

@font-face {
    font-family: "Calibre";
    font-weight: 600;
    src: url("../fonts/Calibre-Semibold.otf");
}

@font-face {
    font-family: "Calibre";
    font-weight: 700;
    src: url("../fonts/Calibre-Bold.otf");
}

/* predefined text styles */
h1 {
    font-family: "Calibre";
    font-weight: 700;
}

h2 {
    font-family: "Calibre";
    font-weight: 600;
}

h3 {
    font-family: "Calibre";
    font-weight: 500;
}

h4 {
    font-family: "Calibre";
    font-weight: 500;
}

p,
li,
a {
    font-family: "Calibre";
    font-weight: 300;
}

input {
    font-family: "Calibre";
    font-weight: 500;
}

b,
strong {
    font-family: "Calibre";
    font-weight: 700;
}

#mainGrid {
    display: grid;
    grid-template-columns: 10% repeat(5, 1fr) 10%;
}

header {
    /* background-color: #C7EAF8; */
    background-color: rgba(199, 234, 248, .95);
    /* width: 100%; */
    grid-column: 1/8;
    height: 100px;
    display: grid;
    justify-content: center;
    grid-template-columns: repeat(11, 1fr);
    position: sticky;
    top: 0px;
    font-family: "Calibre Semi-Bold";
    /* opacity: .90; */
    backdrop-filter: blur(3px);
    /* grid-column: 1/8; */
}

header ul li {
    list-style: none;
    display: inline;
    margin-left: 10px;
    font-family: "Calibre";
    font-weight: 600;
}

header a {
    color: #799DAB;
    text-decoration: none;
    font-size: 18px;
    font-family: "Calibre";
    font-weight: 600;
}

header a:hover {
    color: #F0790E;
}

header ul {
    display: flex;
    align-items: center;
    justify-content: space-evenly;
    grid-column: 7/11;
}

#firstHref {
    grid-column: 2/3;
    align-self: center;
}



footer {
    display: grid;
    justify-content: center;
    grid-template-columns: repeat(7, 1fr);
    height: 150px;
    width: 100%;
    background-color: #C7EAF8;
    grid-column: 1/8;
}

footer section {
    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
    border-radius: 30px;
    background-color: #799DAB;
    width: 37px;
    height: 37px;
    display: flex;
    justify-content: center;
    margin-top: 64px;
}

footer div section a {
    align-self: center ;
}

footer img {
    width: 29px;
    height: 29px;
    align-self: center;
    margin-top: 4px;
}

footer div {
    display: flex;
    justify-content: center;
    grid-column: 1/2;
    gap: 50px;
    margin-left: 180px;
    align-self: center;
}

#contacts {
    display: flex;
    justify-content: center;
    grid-column: 4/7;
    gap: 37.5px;
    margin-left: 180px;
    align-self: center;
    gap: 10px;
    margin-top: 20px;
    font-family: "Calibre";
    font-weight: 300;
}

#contacts a {
    flex-direction: column;
    align-self: center;
}

#contacts p {
    align-self: center;
    color: #799DAB;
}

#location {
    display: flex;
    justify-content: center;
    grid-column: 4/7;
    gap: 50px;
    margin-left: 180px;
    align-self: center;
    gap: 10px;
    margin-bottom: 59px;
    margin-right: 38px;
}

#locatio a {
    flex-direction: column;
    align-self: start;
    margin-bottom: 10px;
}

#location p {
    align-self: center;
    color: #799DAB;
    margin-bottom: 10px;
}

@media screen and (max-width: 576px) {
    header {
        grid-template-rows: 40% 60%;
        height: 220px;
        justify-content: center;
        position: static;
    }

    header img {
        width: 200px;
        height: 65px;
        grid-row: 1/1;
        align-self: center;
        grid-column: 5/9;
        display: flex;

    }

    header ul {
        grid-row: 2/2;
        align-self: center;
        display: flex;
        flex-direction: row;
        align-items: center;
        justify-content: space-evenly;
        grid-column: 2/11;
    }

    header li {
        margin-right: 20px;
        margin-bottom: 20px;
    }

    header li a {
        font-size: 1.15em;
    }

    #firstHref {
        align-self: center;
        grid-column: 4/8;
        margin-top: 20px;
    }

    #about {
        flex-wrap: nowrap;
    }

    footer {
        display: grid;
        grid-column: 1/9;
        grid-template-columns: 1fr 1fr;
        grid-template-rows: repeat(5, 1fr);
        padding-top: 10px;
        padding-bottom: 20px;
    }

    footer div {
        margin-left: 36px;
        flex-direction: column;
        gap: 6px;
        grid-row: 1/6;
        grid-column: 1/2;
    }

    #contacts {
        margin-left: 46px;
        flex-direction: row;
        margin-top: 0;
        grid-row: 2/3;
        grid-column: 2/3;
        align-items: flex-end;

    }

    #location {
        margin-left: 0;
        flex-direction: row;
        margin: 0;
        grid-row: 4/5;
        grid-column: 2/3;
    }

    footer section {
        margin-top: 10px;
    }

    footer img {
        width: 24px;
        height: 24px;
    }

    footer section {
        width: 32px;
        height: 32px;
    }
}

